@@ -5,6 +5,14 @@ use Mouse;
 extends 'App::GitGot::Command';
 use 5.010;
 
+has dirty => (
+  traits        => [qw(Getopt)] ,
+  isa           => 'Bool',
+  is            => 'ro',
+  cmd_aliases   => 'D',
+  documentation => 'open session or window for all dirty repos'
+);
+
 has session => (
   traits        => [qw(Getopt)],
   isa           => 'Bool',
@@ -18,34 +26,53 @@ sub command_names { qw/ mux tmux / }
 sub _execute {
   my( $self, $opt, $args ) = @_;
 
-  my( @repos ) = $self->active_repos;
+  my @repos = $self->dirty ? $self->_get_dirty_repos() : $self->active_repos();
 
   my $target = $self->session ? 'session' : 'window';
 
-  foreach my $repo ( @repos ) {
+ REPO: foreach my $repo ( @repos ) {
+    # is it already opened?
+    my %windows = reverse map { /^(\d+):::(\S+)/ }
+      split "\n", `tmux list-$target -F"#I:::#W"`;
 
-      # is it already opened?
-      my %windows = reverse map { /^(\d+):::(\S+)/ }
-        split "\n", `tmux list-$target -F"#I:::#W"`;
-
-      if( my $window = $windows{$repo->name} ) {
-          if ($self->session) {
-              system 'tmux', 'switch-client', '-t' => $window;
-          } else {
-              system 'tmux', 'select-window', '-t' => $window;
-          }
-      }
-
-      chdir $repo->path;
-
+    if( my $window = $windows{$repo->name} ) {
       if ($self->session) {
-          delete local $ENV{TMUX};
-          system 'tmux', 'new-session', '-d', '-s', $repo->name;
-          system 'tmux', 'switch-client', '-t' => $repo->name;
-      } else {
-          system 'tmux', 'new-window', '-n', $repo->name;
+        system 'tmux', 'switch-client', '-t' => $window;
       }
+      else {
+        system 'tmux', 'select-window', '-t' => $window;
+      }
+      next REPO;
+    }
+
+    chdir $repo->path;
+
+    if ($self->session) {
+      delete local $ENV{TMUX};
+      system 'tmux', 'new-session', '-d', '-s', $repo->name;
+      system 'tmux', 'switch-client', '-t' => $repo->name;}
+    else {
+      system 'tmux', 'new-window', '-n', $repo->name;
+    }
   }
+}
+
+sub _get_dirty_repos {
+  my $self = shift;
+
+  my @dirty_repos;
+  foreach my $repo ( @{ $self->full_repo_list } ) {
+    my $status = $repo->status();
+
+    unless ( ref( $status )) {
+      die "You need at least Git version 1.7 to use the --dirty flag.\n";
+    }
+
+    push @dirty_repos , $repo
+      if $status->is_dirty;
+  }
+
+  return @dirty_repos;
 }
 
 __PACKAGE__->meta->make_immutable;
